# ccstart

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  sqlite-usage.md
.bmad-core/: install-manifest.yaml
.cargo/: config.toml
.claude/: index.json
.github/workflows/: release.yml
.serena/: project.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
doc_debug/: 2025-10-14-windows-build-signal-error.md
refer/: config.json  quick-reference.md  research-report.md  settings-packycode.json
specs/002-ccswitch-rust-claude/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ccswitch-rust-claude/checklists/: requirements.md
specs/002-ccswitch-rust-claude/contracts/: cli-interface.md
src/: error.rs  main.rs
src/commands/: CLAUDE.md  completions.rs  init.rs  list.rs  mod.rs  run.rs  update.rs
src/config/: CLAUDE.md  cache.rs  manager.rs  mod.rs  parser.rs
src/db/: mod.rs  provider.rs
src/utils/: CLAUDE.md  encoding.rs  fs.rs  mod.rs
