[package]
name = "ccstart"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "cargo", "unstable-ext"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
dirs = "5"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SQLite support
rusqlite = { version = "0.31", features = ["bundled"] }
# Content hashing for cache
sha2 = "0.10"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
